# splitlog

./: .gitignore  AGENTS.md  CODEOWNERS  LICENSE  README.md  pyproject.toml  tree1.txt
.github/workflows/: codeql.yml  lint.yaml  publish.yaml  release.yml
splitlog/: __init__.py  __main__.py  outputfolder.py
tests/: __init__.py  test_argument_parser.py  test_main.py  test_outputfolder.py  test_splitter.py
tests/testcases/application_1756057717712_0001/: expected-output.tgz
tests/testcases/application_1756057717712_0002/: expected-output.tgz
tests/testcases/application_1756057717712_0003/: expected-output.tgz
