[tool.poetry]
name = "splitlog"
version = "0.0.0"
description = "Utility to split aggregated logs from Apache Hadoop Yarn applications into a folder hierarchy"
authors = ["Sebastian Klemke <pypi@nerdheim.de>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
repository = "https://github.com/splitlog/splitlog.git"

[tool.poetry.dependencies]
python = "^3.8.0"
python-dateutil = "^2.8.2"
pytz = ">=2023.3"
importlib-metadata = "^6.8.0"

[tool.poetry.scripts]
splitlog = 'splitlog.__main__:main'

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
black = ">=23.9.1,<25.0.0"
types-python-dateutil = "^2.8.19.14"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[build-system]
requires = ["poetry-core>=1.6.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
