[tool.poetry]
name = "splitlog"
version = "0.0.0"
description = "Utility to split aggregated logs from Apache Hadoop Yarn applications into a folder hierarchy"
authors = ["Sebastian Klemke <pypi@nerdheim.de>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
repository = "https://github.com/splitlog/splitlog.git"

[tool.poetry.dependencies]
python = "^3.9.0"
python-dateutil = "^2.9.0"
pytz = ">=2024.2"

[tool.poetry.scripts]
splitlog = 'splitlog.__main__:main'

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
types-python-dateutil = "^2.9.0.20240316"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
