[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "splitlog"
dynamic = ["version"]
description = "Utility to split aggregated logs from Apache Hadoop Yarn applications into a folder hierarchy"
authors = [
    { name = "Sebastian Klemke", email = "pypi@nerdheim.de" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11, <4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
dependencies = [
    "python-dateutil (>=2.9.0,<3.0.0)",
    "pytz (>=2025.2)",
]


[project.urls]
repository = "https://github.com/splitlog/splitlog.git"
"Bug Tracker" = "https://github.com/splitlog/splitlog/issues"

[project.scripts]
splitlog = 'splitlog.__main__:main'

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "types-python-dateutil (>=2.9.0.20251108,<3.0.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

